--- a/backend/package.json
+++ b/backend/package.json
@@ -3,13 +3,19 @@
   "version": "1.0.0",
   "description": "Backend API for MarmIOT project",
   "main": "dist/index.js",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
+    "preinstall": "npm --version && node --version",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "build": "tsc",
     "test": "jest",
     "lint": "eslint . --ext .ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "postinstall": "echo \"Installation completed successfully\""
   },
   "keywords": [],
   "author": "",
@@ -38,6 +44,6 @@
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "~5.0.4"
   }
 }
