--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,19 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
+    "preinstall": "npm --version && node --version",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "postinstall": "echo \"Frontend installation completed successfully\""
   },
   "dependencies": {
     "react": "^18.2.0",
