--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,6 +14,10 @@
     "moduleDetection": "force",
     "noEmit": true,
 
+    /* JSX Support */
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -22,5 +26,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx"]
 }
